Inserindo Server WINS

--- a/smb.conf
+++ b/smb.conf
@@ -23,13 +23,15 @@
 
 [global]
 
+wins support=yes
+
 ## Browsing/Identification ###
 
 # Change this to the workgroup/NT-domain name your Samba server will part of
    workgroup = WORKGROUP
 
 # server string is the equivalent of the NT Description field
-   server string = %h server (Samba, Ubuntu)
+   server string = Público
 
 #### Networking ####
 
